tests/e2e/invalid_return_type5.error
Error: syntax error in story at line 1, column 27

1|    function foo returns List[in]
                                ^

E0046: An indented block is required to be before here
